# Clinic

./: .env  config.py  createadmin.py  extensions.py  pyproject.toml  requirements.txt  run.py
Admin/: __init__.py  decorators.py  models.py  repositories.py  routes.py  schemas.py  services.py
Appointment/: models.py  routes.py  schemas.py
Doctor/: models.py  routes.py  schemas.py
app/: __init__.py  config.py  decorators.py  models.py  repositories.py  schemas.py  services.py
app/resources/: admin.py  auth.py
app/templates/: assign_doctor.html  create_department.html  dashboard.html  landing.html  list_departments.html  login.html  onboard_doctor.html  register.html
common/: auth.py  scheduling.py
migrations/versions/: 73e972cb2f98_initial_tables.py  f0385f18b258_add_doctoravailability_and_appointment_.py
