[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = "A Flask based application"
authors = ["Sarina Khatri"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Flask = ">=2.2"
Flask-JWT-Extended = ">=4.4"
Flask-SQLAlchemy = ">=3.0"
Flask-Migrate = ">=4.0"
marshmallow = ">=3.0"
psycopg2-binary = ">=2.9"
Werkzeug = ">=2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
